--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -12,7 +12,9 @@
 
         <!-- contents -->
         <div id="contents">
-            markup_guide 내용
+            <div class="promotion inner">
+                <p>내용</p>
+            </div>
         </div>
         <!-- //contents -->
 
