--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -26,7 +26,9 @@
 
         <!-- contents -->
         <div id="contents">
-            markup_guide 내용
+            <div class="promotion">
+                
+            </div>
         </div>
         <!-- //contents -->
 
