index링크연결 / 페이지별파일생성

--- a/pages/About.html
+++ b/pages/About.html
@@ -15,8 +15,8 @@
 <!-- wrapper -->
 <div id="wrapper">
 
-    <!-- container -->
-    <div class="container">
+  <!-- container -->
+  <div class="container">
 
 <!-- header -->
 <header>
@@ -24,13 +24,11 @@
 </header>
 <!-- //header -->
 
-        <!-- contents -->
-        <div id="contents">
-            <div class="promotion inner">
-                <p>내용</p>
-            </div>
-        </div>
-        <!-- //contents -->
+      <!-- contents -->
+      <div id="contents">
+        about page
+      </div>
+      <!-- //contents -->
 
 <!-- footer -->
 <footer>
@@ -38,8 +36,8 @@
 </footer>
 <!-- //footer -->
 
-    </div>
-    <!-- //container -->
+  </div>
+  <!-- //container -->
 
 </div>
 <!-- //wrapper -->
