--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -8,17 +8,34 @@
     <!-- container -->
     <div class="container">
 
-        <!-- @@include ../page_include/header.html -->
 
         <!-- contents -->
         <div id="contents">
-            <div class="promotion inner">
-                <p>내용</p>
+            <div class="promotion">
+
+                <div class="promo_tit con_pd">
+                    <h1>Style Guide</h1>
+                    <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
+                </div>
+                
+                <div class="promo_con con_pd">
+                    <div class="typography_design">
+                        <h3>Typography Design</h3>
+                        <div class="typo_box">
+                            <div class="download">
+                                <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
+                            </div>
+                            <div class="font">
+                                <span class="ico"></span><p>Inter Font</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- @@include ../page_include/header.html -->
+                    <!-- @@include ../page_include/footer.html -->
+                </div>  
             </div>
         </div>
         <!-- //contents -->
-
-        <!-- @@include ../page_include/footer.html -->
 
     </div>
     <!-- //container -->
