--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -22,11 +22,29 @@
         <!-- contents -->
         <div id="contents">
             <div class="promotion">
-                
-            </div>
-        </div>
-        <!-- //contents -->
 
+                <div class="promo_tit con_pd">
+                    <h1>Style Guide</h1>
+                    <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
+                </div>
+                
+                <div class="promo_con con_pd">
+                    <div class="typography_design">
+                        <h3>Typography Design</h3>
+                        <div class="typo_box">
+                            <div class="download">
+                                <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
+                            </div>
+                            <div class="font">
+                                <span class="ico"></span><p>Inter Font</p>
+                            </div>
+                        </div>
+                    </div>
+<!-- header -->
+<header>
+    header 내용
+</header>
+<!-- //header -->
 <!-- footer -->
 <footer>
     footer 내용
@@ -42,5 +60,7 @@
 
 </div>
 <!-- //wrapper -->
+
+
 </body>
 </html>
