test / index주소 추가

--- a/dev/page_dev/Home.html
+++ b/dev/page_dev/Home.html
@@ -12,7 +12,7 @@
 
         <!-- contents -->
         <div id="contents">
-            내용
+            home 내용입니다
         </div>
         <!-- //contents -->
 
