--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -13,12 +13,16 @@
         <div id="contents">
             <div class="promotion">
 
+                <!-- promo_tit -->
                 <div class="promo_tit con_pd">
                     <h1>Style Guide</h1>
                     <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
                 </div>
+                <!-- //promo_tit -->
                 
+                <!-- promo_con -->
                 <div class="promo_con con_pd">
+                    <!-- typo -->
                     <div class="typography_design">
                         <h3>Typography Design</h3>
                         <div class="typo_box">
@@ -26,13 +30,20 @@
                                 <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
                             </div>
                             <div class="font">
-                                <span class="ico"></span><p>Inter Font</p>
+                                <span class="ico"></span><p>Inter Fontsssssss</p>
                             </div>
                         </div>
                     </div>
+                    <!-- //typo -->
+
+
+
                     <!-- @@include ../page_include/header.html -->
                     <!-- @@include ../page_include/footer.html -->
-                </div>  
+                </div>
+                <!-- //promo_con -->
+
+
             </div>
         </div>
         <!-- //contents -->
