--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -23,12 +23,16 @@
         <div id="contents">
             <div class="promotion">
 
+                <!-- promo_tit -->
                 <div class="promo_tit con_pd">
                     <h1>Style Guide</h1>
                     <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
                 </div>
+                <!-- //promo_tit -->
                 
+                <!-- promo_con -->
                 <div class="promo_con con_pd">
+                    <!-- typo -->
                     <div class="typography_design">
                         <h3>Typography Design</h3>
                         <div class="typo_box">
@@ -36,10 +40,14 @@
                                 <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
                             </div>
                             <div class="font">
-                                <span class="ico"></span><p>Inter Font</p>
+                                <span class="ico"></span><p>Inter Fontsssssss</p>
                             </div>
                         </div>
                     </div>
+                    <!-- //typo -->
+
+
+
 <!-- header -->
 <header>
     header 내용
@@ -50,7 +58,10 @@
     footer 내용
 </footer>
 <!-- //footer -->
-                </div>  
+                </div>
+                <!-- //promo_con -->
+
+
             </div>
         </div>
         <!-- //contents -->
