--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -30,7 +30,7 @@
                                 <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
                             </div>
                             <div class="font">
-                                <span class="ico"></span><p>Inter Fontsssssss</p>
+                                <span class="ico"></span><p>Inter Font</p>
                             </div>
                         </div>
                     </div>
