--- a/pages/Home.html
+++ b/pages/Home.html
@@ -26,7 +26,7 @@
 
         <!-- contents -->
         <div id="contents">
-            home 내용입니다
+            home
         </div>
         <!-- //contents -->
 
