--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -23,7 +23,8 @@
 
                 <!-- promo_con -->
                 <div class="promo_con con_pd">
-                    <!-- typo -->
+
+                    <!-- typography -->
                     <div class="typography_design">
                         <h3>Typography Design</h3>
                         <div class="typo_box">
@@ -35,7 +36,40 @@
                             </div>
                         </div>
                     </div>
-                    <!-- //typo -->
+                    <!-- //typography -->
+
+                    <!-- text_heading -->
+                    <div class="text_heading">
+                      <div class="tehead_wrap">
+                        <div class="heading">
+                          <p class="heading_1">Heading 1</p>
+                          <p class="heading_2">Heading 2</p>
+                          <p class="heading_3">Heading 3</p>
+                          <p class="heading_4">Heading 4</p>
+                          <p class="heading_5">Heading 5</p>
+                          <p class="heading_6">Heading 6</p>
+                        </div>
+                        <div class="body_text">
+                          <p>Body Text</br></br>
+                            Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. 
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- //text_heading -->
+
+                    <div class="color_palette">
+                      <ul>
+                        <li class="green"></li>
+                        <li class="mint"></li>
+                        <li class="green"></li>
+                        <li class="purple"></li>
+                        <li class="black"></li>
+                        <li class="gary"></li>
+                        <li class="white"></li>
+                      </ul>
+                    </div>
+
                 </div>
                 <!-- //promo_con -->
 
