promotion 페이지 마크업

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -51,24 +51,46 @@
                         </div>
                         <div class="body_text">
                           <p>Body Text</br></br>
-                            Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. 
+                            Apparently we had reached a great height in the</br>br>atmosphere, for the sky was a dead black, and the</br>b?stars had ceased to twinkle. 
                           </p>
                         </div>
                       </div>
                     </div>
                     <!-- //text_heading -->
 
+                    <!-- color_palette -->
                     <div class="color_palette">
+                      <h3>Color Palette</h3>
                       <ul>
-                        <li class="green"></li>
-                        <li class="mint"></li>
-                        <li class="green"></li>
-                        <li class="purple"></li>
-                        <li class="black"></li>
-                        <li class="gary"></li>
-                        <li class="white"></li>
+                        <li class="sub_color">$sub_color</li>
+                        <li class="color_1">$color_1</li>
+                        <li class="prime_color">$prime_color</li>
+                        <li class="color_2">$color_2</li>
+                        <li class="color_3">$color_3</li>
+                        <li class="color_4">$color_4</li>
+                        <li class="color_5">$color_5</li>
                       </ul>
                     </div>
+                    <!-- //color_palette -->
+
+                    <!-- components -->
+                    <div class="components">
+                      <h3>Components</h3>
+                      <div>
+                        <ul class="btn_com_list">
+                          <li class="btn_1"><a href="#none">Button</a></li>
+                          <li class="btn_2"><a href="#none">Secondary</a></li>
+                          <li class="btn_3"><a href="#none">Listen Now</a></li>
+                          <li class="btn_4"><a href="#none">Read Now</a></li>
+                        </ul>
+                        <ul class="btn_hover_list">
+                          <li>Hover</li>
+                          <li>Hover</li>
+                          <li>Hover</li>
+                          <li>Hover</li>
+                        </ul>
+                      </div>
+                    <!-- //components -->
 
                 </div>
                 <!-- //promo_con -->
