popup import 경로 삭제

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -80,8 +80,8 @@
                         <ul class="btn_com_list">
                           <li class="btn_1"><a href="#none">Button</a></li>
                           <li class="btn_2"><a href="#none">Secondary</a></li>
-                          <li class="btn_3"><a href="#none">Listen Now</a></li>
-                          <li class="btn_4"><a href="#none">Read Now</a></li>
+                          <li class="btn_listen"><a href="#none">Listen Now</a></li>
+                          <li class="btn_read"><a href="#none">Read Now</a></li>
                         </ul>
                         <ul class="btn_hover_list">
                           <li>Hover</li>
