--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="body_text">
                           <p>Body Text</br></br>
-                            Apparently we had reached a great height in the</br>br>atmosphere, for the sky was a dead black, and the</br>b?stars had ceased to twinkle. 
+                            Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black, and the</br>stars had ceased to twinkle. 
                           </p>
                         </div>
                       </div>
@@ -77,26 +77,64 @@
                     <div class="components">
                       <h3>Components</h3>
                       <div>
+                        
+                        <!-- btn -->
                         <ul class="btn_com_list">
                           <li class="btn_1"><a href="#none">Button</a></li>
                           <li class="btn_2"><a href="#none">Secondary</a></li>
-                          <li class="btn_listen"><a href="#none">Listen Now</a></li>
+                          <li class="btn_listen"><a href="#none"><i class="play"></i>Listen Now</a></li>
                           <li class="btn_read"><a href="#none">Read Now</a></li>
                         </ul>
+
                         <ul class="btn_hover_list">
-                          <li>Hover</li>
-                          <li>Hover</li>
-                          <li>Hover</li>
-                          <li>Hover</li>
+                          <li class="btn_1"><a href="#none">Hover</a></li>
+                          <li class="btn_2"><a href="#none">Hover</a></li>
+                          <li class="btn_listen"><a href="#none"><i class="play"></i>Hover</a></li>
+                          <li class="btn_read"><a href="#none">Hover</a></li>
+                        </ul>
+                        <!-- //btn -->
+
+                        <!-- category potcasts -->
+                        <ul class="category_potcasts">
+                          <li class="cate_pot_on"><a href="#none">All Podcasts</a></li>
+                          <li class="cate_pot"><a href="#none">Startup</a></li>
+                          <li class="cate_pot"><a href="#none">Marketing</a></li>
+                          <li class="cate_pot"><a href="#none">Business</a></li>
+                        </ul>
+                        <!-- //category potcasts -->
+
+                      </div>
+
+                      <div class="potcasts">
+
+                        <!-- potcasts -->
+                        <ul class="potcasts_list">
+                          <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
+                          <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
+                          <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
+                          <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
+                        </ul>
+                        <!-- //potcasts -->
+
+                        <ul class="sns_list">
+                          <div class="ico_big">
+                            <li><a href="#none"><img src="../../assets/images/ico/ico_facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#none"><img src="../../assets/images/ico/ico_linkedIn.svg" alt="linkedIn"></a></li>
+                            <li><a href="#none"><img src="../../assets/images/ico/ico_instagram.svg" alt="instagram"></a></li>
+                          </div>
+                          <div class="ico_small">
+                            <li><a href="#none"><img src="../../assets/images/ico/ico_facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#none"><img src="../../assets/images/ico/ico_linkedIn.svg" alt="linkedIn"></a></li>
+                            <li><a href="#none"><img src="../../assets/images/ico/ico_instagram.svg" alt="instagram"></a></li>
+                          </div>
                         </ul>
                       </div>
                     <!-- //components -->
 
                 </div>
-                <!-- //promo_con -->
-
-
             </div>
+            <!-- //promo_con -->
+
             <!-- @@include ../page_include/footer.html -->
         </div>
         <!-- //contents -->
