--- a/pages/Home.html
+++ b/pages/Home.html
@@ -26,7 +26,20 @@
 
         <!-- contents -->
         <div id="contents">
-            home
+          <input class="check" type="checkbox">
+          <div class="main_wrap">
+            <div class="main_tit">
+              <p class="heading_1">Become The Hero Of Your Own Story</p>
+              <p class="heading_5">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+              </p>
+              <p class="email_send">
+                <input type="email" placeholder="Enter Your Email Id">
+                <input type="submit" value="Subscribe">
+              </p>
+            </div>
+          </div>
         </div>
         <!-- //contents -->
 
