sass파일 분기 / css 분기

--- a/dev/layout_template.html
+++ b/dev/layout_template.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <!-- js -->
-    <script src="../assets/js/main.js"></script>
+    <link rel="stylesheet" href="../assets/css/display_kim.css">
+    <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
 <body>
-    <!-- @@placeholder=root_content --> 
+    <!-- @@placeholder=root_content -->
+
+    <!-- js -->
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
