--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <!-- js -->
-    <script src="../assets/js/main.js"></script>
+    <link rel="stylesheet" href="../assets/css/display_kim.css">
+    <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
 <body>
 
@@ -21,7 +20,7 @@
 
         <!-- contents -->
         <div id="contents">
-            
+
 <!-- header -->
 <header>
     header 내용
@@ -65,7 +64,7 @@
                         </div>
                         <div class="body_text">
                           <p>Body Text</br></br>
-                            Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black, and the</br>stars had ceased to twinkle. 
+                            Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black, and the</br>stars had ceased to twinkle.
                           </p>
                         </div>
                       </div>
@@ -91,7 +90,7 @@
                     <div class="components">
                       <h3>Components</h3>
                       <div>
-                        
+
                         <!-- btn -->
                         <ul class="btn_com_list">
                           <li class="btn_1"><a href="#none">Button</a></li>
@@ -164,5 +163,8 @@
 <!-- //wrapper -->
 
 
+
+    <!-- js -->
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
