--- a/pages/Single_Blog.html
+++ b/pages/Single_Blog.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <!-- js -->
-    <script src="../assets/js/main.js"></script>
+    <link rel="stylesheet" href="../assets/css/display_kim.css">
+    <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
 <body>
 
@@ -43,5 +42,8 @@
 <!-- //wrapper -->
 
 
+
+    <!-- js -->
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
