header footer 작업중

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -118,14 +118,14 @@
 
                         <ul class="sns_list">
                           <div class="ico_big">
-                            <li><a href="#none"><img src="../../assets/images/ico/ico_facebook.svg" alt="facebook"></a></li>
-                            <li><a href="#none"><img src="../../assets/images/ico/ico_linkedIn.svg" alt="linkedIn"></a></li>
-                            <li><a href="#none"><img src="../../assets/images/ico/ico_instagram.svg" alt="instagram"></a></li>
+                            <li class="facebook_b"><a href="#none"></a></li>
+                            <li class="linkedIn_b"><a href="#none"></a></li>
+                            <li class="instagram_b"><a href="#none"></a></li>
                           </div>
                           <div class="ico_small">
-                            <li><a href="#none"><img src="../../assets/images/ico/ico_facebook.svg" alt="facebook"></a></li>
-                            <li><a href="#none"><img src="../../assets/images/ico/ico_linkedIn.svg" alt="linkedIn"></a></li>
-                            <li><a href="#none"><img src="../../assets/images/ico/ico_instagram.svg" alt="instagram"></a></li>
+                            <li class="facebook_s"><a href="#none"></a></li>
+                            <li class="linkedIn_s"><a href="#none"></a></li>
+                            <li class="instagram_s"><a href="#none"></a></li>
                           </div>
                         </ul>
                       </div>
