--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -1,5 +1,29 @@
 <!-- header -->
-<header>
-    header 내용
+<header class="con_pd">
+    <h1>
+      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </h1>
+
+    <!-- gnb -->
+    <nav>
+      <div class="gnb">
+
+        <ul class="menu">
+          <li><a href="Podcasts.html">Podcasts</a></li>
+          <li><a href="Host.html">Host</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Blog.html">Blog</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul>
+
+        <ul class="sns">
+          <li><a href="#none" class="facebook_b"></a></li>
+          <li><a href="#none" class="linkedIn_b"></a></li>
+          <li><a href="#none" class="instagram_b"></a></li>
+        </ul>
+        
+      </div>
+    </nav>
+    <!-- //gnb -->
 </header>
 <!-- //header -->
