--- a/pages/Host.html
+++ b/pages/Host.html
@@ -18,8 +18,32 @@
   <div class="container">
 
 <!-- header -->
-<header>
-    header 내용
+<header class="con_pd">
+    <h1>
+      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </h1>
+
+    <!-- gnb -->
+    <nav>
+      <div class="gnb">
+
+        <ul class="menu">
+          <li><a href="Podcasts.html">Podcasts</a></li>
+          <li><a href="Host.html">Host</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Blog.html">Blog</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul>
+
+        <ul class="sns">
+          <li><a href="#none" class="facebook_b"></a></li>
+          <li><a href="#none" class="linkedIn_b"></a></li>
+          <li><a href="#none" class="instagram_b"></a></li>
+        </ul>
+        
+      </div>
+    </nav>
+    <!-- //gnb -->
 </header>
 <!-- //header -->
 
@@ -31,7 +55,59 @@
 
 <!-- footer -->
 <footer>
-    footer 내용
+
+  <!-- footer_sponsors -->
+  <div class="footer_sponsors">
+    <h3 class="heading_2">Our Spoonsors</h3>
+    <div class="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+    </div>
+  </div>
+  <!-- //footer_sponsors -->
+
+  <!-- footer_con -->
+  <div class="footer_con">
+
+    <div class="logo_wrap">
+      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </div>
+
+    <div class="footer_sub">
+
+      <div class="pages">
+        <li><a href="Podcasts.html">Podcasts</a></li>
+        <li><a href="Host.html">Host</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Blog.html">Blog</a></li>
+      </div>
+
+      <div class="reach_us">
+        <ul>
+          <li><a href="#none">Contact</a></li>
+          <li><a href="#none">About</a></li>
+        </ul>
+      </div>
+
+      <div class="subscribe">
+        <ul>
+          <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
+          <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
+          <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
+          <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
 </footer>
 <!-- //footer -->
 
