home 코딩진행중

--- a/dev/page_dev/podcasts.html
+++ b/dev/page_dev/podcasts.html
@@ -7,10 +7,9 @@
 
   <!-- container -->
   <div class="container">
-
       <!-- contents -->
       <div id="contents">
-        blog page
+        podcast page
       </div>
       <!-- //contents -->
 
