--- a/dev/page_dev/single_podcast.html
+++ b/dev/page_dev/single_podcast.html
@@ -10,7 +10,7 @@
 
       <!-- contents -->
       <div id="contents">
-        about page
+        single_podcast page
       </div>
       <!-- //contents -->
 
