--- a/dev/layout_template.html
+++ b/dev/layout_template.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <link rel="stylesheet" href="../assets/css/display_kim.css">
-    <link rel="stylesheet" href="../assets/css/display_soo.css">
+    <link rel="stylesheet" type="text/css" href="../assets/plugin/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display_kim.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display_soo.css">
 </head>
 <body>
     <!-- @@placeholder=root_content -->
