--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>finsweet8</title>
-    <!-- css -->
-    <link rel="stylesheet" type="text/css" href="../assets/plugin/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/display.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/display_kim.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/display_soo.css">
-</head>
-<body>
+<!-- @@master ../layout_template.html -->
+
+<!-- @@block root_content -->
 
 <!-- wrapper -->
 <div id="wrapper">
@@ -87,10 +76,4 @@
 </div>
 <!-- //wrapper -->
 
-
-
-    <!-- js -->
-    <script src="../assets/plugin/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/js/main.js"></script>
-</body>
-</html>
+<!-- @@close -->
