--- a/pages/podcasts.html
+++ b/pages/podcasts.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <link rel="stylesheet" href="../assets/css/display_kim.css">
-    <link rel="stylesheet" href="../assets/css/display_soo.css">
+    <link rel="stylesheet" type="text/css" href="../assets/plugin/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display_kim.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display_soo.css">
 </head>
 <body>
 
@@ -18,10 +18,9 @@
 
   <!-- container -->
   <div class="container">
-
       <!-- contents -->
       <div id="contents">
-        about page
+        podcast page
       </div>
       <!-- //contents -->
 
