--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -82,8 +82,8 @@
                       <ul class="btn_com_list">
                         <li class="btn_1"><a href="#none">Button</a></li>
                         <li class="btn_2"><a href="#none">Secondary</a></li>
-                        <li class="btn_listen"><a href="#none"><i class="play"></i>Listen Now</a></li>
-                        <li class="btn_read"><a href="#none">Read Now</a></li>
+                        <li><a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a></li>
+                        <li><a href="#none" class="btn_read">Read Now</a></li>
                       </ul>
 
                       <ul class="btn_hover_list">
@@ -136,6 +136,7 @@
           <!-- //promo_con -->
 
           </div>
+          <!-- @@include ../page_include/recent_episodes.html -->
           <!-- @@include ../page_include/footer.html -->
         <!-- //contents -->
 
