--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -8,30 +8,50 @@
     <nav>
       <div class="gnb">
         
-        <!-- mo-hamburger -->
-        <input type="checkbox" name="" id="">
-        <div class="hamburger-lines">
-            <span class="line line1"></span>
-            <span class="line line2"></span>
-            <span class="line line3"></span>
+        <!-- mo_hamburger -->
+        <div class="mo_hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
+        <!-- //mo_hamburger -->
 
-        <ul class="menu">
-          <li><a href="Podcasts.html">Podcasts</a></li>
-          <li><a href="Host.html">Host</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Blog.html">Blog</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
+        <div class="bg_gray"></div>
 
-        <ul class="sns">
-          <li><a href="#none" class="facebook_b"></a></li>
-          <li><a href="#none" class="linkedIn_b"></a></li>
-          <li><a href="#none" class="instagram_b"></a></li>
-        </ul>
+        <div class="sub_menu">
+          <ul class="menu">
+            <li><a href="Podcasts.html">Podcasts</a></li>
+            <li><a href="Host.html">Host</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+
+          <ul class="sns">
+            <li><a href="#none" class="facebook_b"></a></li>
+            <li><a href="#none" class="linkedIn_b"></a></li>
+            <li><a href="#none" class="instagram_b"></a></li>
+          </ul>
+        </div>
         
       </div>
     </nav>
     <!-- //gnb -->
 </header>
 <!-- //header -->
+
+<script>
+
+  const burger = document.querySelector('.mo_hamburger');
+  const sub = document.querySelector('.sub_menu');
+  const bgOn = document.querySelector('.bg_gray');
+
+  burger.addEventListener('click', () => {
+    burger.classList.toggle('toggle');
+    // 수정필요 .contents oh
+    sub.classList.toggle('mo_menu_on')
+    bgOn.classList.toggle('mo_bg_on')
+    document.body.classList.toggle('no_scroll')
+  })
+
+</script>
