--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -33,33 +33,53 @@
     <nav>
       <div class="gnb">
         
-        <!-- mo-hamburger -->
-        <input type="checkbox" name="" id="">
-        <div class="hamburger-lines">
-            <span class="line line1"></span>
-            <span class="line line2"></span>
-            <span class="line line3"></span>
+        <!-- mo_hamburger -->
+        <div class="mo_hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
+        <!-- //mo_hamburger -->
 
-        <ul class="menu">
-          <li><a href="Podcasts.html">Podcasts</a></li>
-          <li><a href="Host.html">Host</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Blog.html">Blog</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
+        <div class="bg_gray"></div>
 
-        <ul class="sns">
-          <li><a href="#none" class="facebook_b"></a></li>
-          <li><a href="#none" class="linkedIn_b"></a></li>
-          <li><a href="#none" class="instagram_b"></a></li>
-        </ul>
+        <div class="sub_menu">
+          <ul class="menu">
+            <li><a href="Podcasts.html">Podcasts</a></li>
+            <li><a href="Host.html">Host</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+
+          <ul class="sns">
+            <li><a href="#none" class="facebook_b"></a></li>
+            <li><a href="#none" class="linkedIn_b"></a></li>
+            <li><a href="#none" class="instagram_b"></a></li>
+          </ul>
+        </div>
         
       </div>
     </nav>
     <!-- //gnb -->
 </header>
 <!-- //header -->
+
+<script>
+
+  const burger = document.querySelector('.mo_hamburger');
+  const sub = document.querySelector('.sub_menu');
+  const bgOn = document.querySelector('.bg_gray');
+
+  burger.addEventListener('click', () => {
+    burger.classList.toggle('toggle');
+    // 수정필요 .contents oh
+    sub.classList.toggle('mo_menu_on')
+    bgOn.classList.toggle('mo_bg_on')
+    document.body.classList.toggle('no_scroll')
+  })
+
+</script>
           <div class="promotion">
               <!-- promo_tit -->
               <div class="promo_tit con_pd">
@@ -129,8 +149,8 @@
                       <ul class="btn_com_list">
                         <li class="btn_1"><a href="#none">Button</a></li>
                         <li class="btn_2"><a href="#none">Secondary</a></li>
-                        <li class="btn_listen"><a href="#none"><i class="play"></i>Listen Now</a></li>
-                        <li class="btn_read"><a href="#none">Read Now</a></li>
+                        <li><a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a></li>
+                        <li><a href="#none" class="btn_read">Read Now</a></li>
                       </ul>
 
                       <ul class="btn_hover_list">
@@ -183,6 +203,38 @@
           <!-- //promo_con -->
 
           </div>
+<!-- recent_episodes -->
+<div class="recent_episodes con_pd">
+  <!-- recent_text -->
+  <div class="recent_text">
+    <h2 class="heading_2">Recent Episodes</h2>
+    <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+    <a href="#none" class="btn_1 btn_recent">See All Episodes</a>
+  </div>
+  <!-- //recent_text -->
+
+  <div class="recent_video">
+    <ul>
+      <li>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bjr8nWZP2ag?rel=0&autoplay=1&mute=1&playlist=bjr8nWZP2ag&loop=1" frameborder="0" allowfullscreen></iframe>
+        <div class="recent_video_text">
+          <h3>Ep 1: How to build a world-class business brand</h3>
+          <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_listen">Listen Now</a>
+        </div>
+      </li>
+      <li>
+
+      </li>
+      <li>
+
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- //recent_episodes -->
+
+
 <!-- footer -->
 <footer>
 
