--- a/dev/layout_template.html
+++ b/dev/layout_template.html
@@ -12,25 +12,7 @@
     <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
 <body>
-
-<!-- wrapper -->
-<div id="wrapper">
-
-  <!-- container -->
-  <div class="container">
-      <!-- contents -->
-      <div id="contents">
-        podcast page
-      </div>
-      <!-- //contents -->
-
-  </div>
-  <!-- //container -->
-
-</div>
-<!-- //wrapper -->
-
-
+    <!-- @@placeholder=root_content -->
 
     <!-- js -->
     <script src="../assets/plugin/swiper/swiper-bundle.min.js"></script>
