--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,9 +18,10 @@
 
   <!-- container -->
   <div class="container">
+
       <!-- contents -->
       <div id="contents">
-        podcast page
+        contact page
       </div>
       <!-- //contents -->
 
