--- a/pages/home.html
+++ b/pages/home.html
@@ -6,89 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <link rel="stylesheet" href="../assets/css/display_kim.css">
-    <link rel="stylesheet" href="../assets/css/display_soo.css">
+    <link rel="stylesheet" type="text/css" href="../assets/plugin/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display_kim.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/display_soo.css">
 </head>
 <body>
 
 <!-- wrapper -->
 <div id="wrapper">
 
-  <!-- container -->
-  <div class="container">
+    <!-- container -->
+    <div class="container">
 
-      <!-- contents -->
-      <div id="contents">
-        <!-- dark_mode -->
-        <input class="dark_mode" type="checkbox">
-        <!-- // dark_mode -->
-        <div class="home_wrap">
-          <div class="main_top">
-            <div class="main_tit">
-              <p class="heading_1">Become The Hero Of Your Own Story</p>
-              <p class="heading_5">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-              </p>
-              <p class="email_send">
-                <input type="email" placeholder="Enter Your Email Id">
-                <input type="submit" value="Subscribe">
-              </p>
-            </div>
-          </div>
-          <div class="mq_logo_list">
-            <marquee scrollamount=10>
-              <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
-              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts logo"></a>
-              <a href="#none"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
-              <a href="#none"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
-              <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
-            </marquee>
-          </div>
-          <div class="sec_wrap">
-            <div class="sec sec1">
-              <div class="sec_txt">
-                <p class="heading_2">A podcast for makers and entrepreneurs</p>
+
+
+        <!-- contents -->
+        <div id="contents">
+          <!-- dark_mode -->
+          <input class="dark_mode" type="checkbox">
+          <!-- // dark_mode -->
+          <div class="home_wrap">
+            <div class="main_top">
+              <div class="main_tit">
+                <p class="heading_1">Become The Hero Of Your Own Story</p>
                 <p class="heading_5">
-                  Apparently we had reached a great height in the atmosphere, for the sky was a dead black,
-                  and the stars had ceased to twinkle.
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+                </p>
+                <p class="email_send">
+                  <input type="email" placeholder="Enter Your Email Id">
+                  <input type="submit" value="Subscribe">
                 </p>
               </div>
-              <p class="sec_img">A podcast for makers and entrepreneurs img</p>
             </div>
-            <div class="sec sec2">
-              <div class="sec_txt">
-                <p class="heading_2">My origins on <span>YouTube</span> in 2008</p>
-                <p class="heading_5">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mus cras lacus tellus morbi viverra suspendisse ornare.
-                  Sit volutpat, volutpat ut netus malesuada enim penatibus non aliquet.
-                </p>
+
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper">
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/spotify.png" alt="spotify logo"></a>
               </div>
-              <p class="sec_img">my origins on youtube in 2008 img</p>
-              <button type="button" class="heading_2 bnt_video">350+ Videos</button>
             </div>
-          </div> <!-- //sec_wrap -->
 
-          <!-- <div class="swiper custom_swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">Resize me!1</div>
-              <div class="swiper-slide">Resize me2!</div>
-              <div class="swiper-slide">Resize me3!</div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-          </div> -->
+            <div class="sec_wrap">
+              <div class="sec sec1">
+                <div class="sec_txt">
+                  <p class="heading_2">A podcast for makers and entrepreneurs</p>
+                  <p class="heading_5">
+                    Apparently we had reached a great height in the atmosphere, for the sky was a dead black,
+                    and the stars had ceased to twinkle.
+                  </p>
+                </div>
+                <p class="sec_img">A podcast for makers and entrepreneurs img</p>
+              </div>
+              <div class="sec sec2">
+                <div class="sec_txt">
+                  <p class="heading_2">My origins on <span>YouTube</span> in 2008</p>
+                  <p class="heading_5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mus cras lacus tellus morbi viverra suspendisse ornare.
+                    Sit volutpat, volutpat ut netus malesuada enim penatibus non aliquet.
+                  </p>
+                </div>
+                <p class="sec_img">my origins on youtube in 2008 img</p>
+                <button type="button" class="heading_2 bnt_video">350+ Videos</button>
+              </div>
+            </div> <!-- //sec_wrap -->
 
-        </div><!-- //home_wrap -->
-      </div>
-      <!-- //contents -->
+          </div><!-- //home_wrap -->
+        </div>
+        <!-- //contents -->
 
 
 
-  </div>
-  <!-- //container -->
+    </div>
+    <!-- //container -->
+
 </div>
 <!-- //wrapper -->
 
