--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -60,7 +60,7 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <!-- <div class="swiper custom_swiper">
+          <div class="swiper custom_swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">Resize me!1</div>
               <div class="swiper-slide">Resize me2!</div>
@@ -68,7 +68,7 @@
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
-          </div> -->
+          </div>
 
         </div><!-- //home_wrap -->
       </div>
