공통수정 / 인클루드 파일 작성

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -10,9 +10,6 @@
 
       <!-- contents -->
       <div id="contents">
-        <!-- dark_mode -->
-        <input class="dark_mode" type="checkbox">
-        <!-- // dark_mode -->
         <div class="home_wrap">
           <div class="main_top">
             <div class="main_tit">
@@ -36,7 +33,7 @@
               <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
             </marquee>
           </div>
-          <div class="sec_wrap">
+          <div class="sec_wrap con-m">
             <div class="sec sec1">
               <div class="sec_txt">
                 <p class="heading_2">A podcast for makers and entrepreneurs</p>
@@ -60,17 +57,57 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <div class="swiper custom_swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">Resize me!1</div>
-              <div class="swiper-slide">Resize me2!</div>
-              <div class="swiper-slide">Resize me3!</div>
+          <div class="custom_swiper con-m">
+            <div class="custom_wrap">
+              <div class="custom_item">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                  <p class="heading_5">Eve Madien</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </div>
+              <div class="custom_item">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                  <p class="heading_5">Ash Benfred</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </div>
+              <div class="custom_item">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                  <p class="heading_5">Ryan Smith</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div> -->
+
           </div>
+          <!-- @@include ../page_include/layout_your_inbox.html -->
+
+          <!-- @@include ../page_include/layout_list.html -->
 
         </div><!-- //home_wrap -->
+        <!-- @@include ../page_include/footer.html -->
+
       </div>
       <!-- //contents -->
 
