--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -267,7 +267,7 @@
 
   <!-- footer_con -->
   <div class="footer_con">
-    
+
     <div class="logo_wrap">
       <a href="Home.html"><img src="../../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
@@ -299,7 +299,9 @@
         <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
       </ul>
     </div>
-
+    <!-- dark_mode -->
+    <input class="dark_mode" type="checkbox">
+    <!-- // dark_mode -->
   </div>
 
   <div class="copyright">
