--- a/pages/home.html
+++ b/pages/home.html
@@ -21,9 +21,6 @@
 
       <!-- contents -->
       <div id="contents">
-        <!-- dark_mode -->
-        <input class="dark_mode" type="checkbox">
-        <!-- // dark_mode -->
         <div class="home_wrap">
           <div class="main_top">
             <div class="main_tit">
@@ -47,7 +44,7 @@
               <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
             </marquee>
           </div>
-          <div class="sec_wrap">
+          <div class="sec_wrap con-m">
             <div class="sec sec1">
               <div class="sec_txt">
                 <p class="heading_2">A podcast for makers and entrepreneurs</p>
@@ -71,17 +68,153 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <div class="swiper custom_swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">Resize me!1</div>
-              <div class="swiper-slide">Resize me2!</div>
-              <div class="swiper-slide">Resize me3!</div>
+          <div class="custom_swiper con-m">
+            <div class="custom_wrap">
+              <div class="custom_item">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                  <p class="heading_5">Eve Madien</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </div>
+              <div class="custom_item">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                  <p class="heading_5">Ash Benfred</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </div>
+              <div class="custom_item">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                  <p class="heading_5">Ryan Smith</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div> -->
+
           </div>
+<!-- layout_your_inbox -->
+<div class="inbox_wrap con-m">
+  <div class="inbox">
+    <p class="heading_2">Receive new episodes in your inbox.</p>
+    <p class="email_send">
+      <input type="email" placeholder="Enter Your Email Id">
+      <input type="submit" value="Subscribe">
+    </p>
+  </div>
+</div>
+<!-- //layout_your_inbox -->
+
+
+
+<!-- laytout_list -->
+<div class="con-m">
+  <ul class="item_list_wrap">
+    <li class="item">
+      <a href="#none">Read our articles & news</a>
+    </li>
+    <li class="item">
+      <a href="#none">
+        <p class="heading_3">Getting the first 100 customers for your business</p>
+        <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+        <p class="btn_listen">Read Now</p>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#none">
+        <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
+        <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+        <p class="btn_listen">Read Now</p>
+      </a>
+    </li>
+  </ul>
+</div>
+<!-- //laytout_list -->
+
+
 
         </div><!-- //home_wrap -->
+<!-- footer -->
+<footer>
+
+  <!-- footer_sponsors -->
+  <div class="footer_sponsors">
+    <h3 class="heading_2">Our Spoonsors</h3>
+    <div class="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+      <img src="../../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+    </div>
+  </div>
+  <!-- //footer_sponsors -->
+
+  <!-- footer_con -->
+  <div class="footer_con">
+
+    <div class="logo_wrap">
+      <a href="Home.html"><img src="../../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+    </div>
+
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="#none">Contact</a></li>
+        <li><a href="#none">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+    <!-- dark_mode -->
+    <input class="dark_mode" type="checkbox">
+    <!-- // dark_mode -->
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
+</footer>
+<!-- //footer -->
+
       </div>
       <!-- //contents -->
 
