공통 부분  수정

--- a/dev/page_include/recent_episodes.html
+++ b/dev/page_include/recent_episodes.html
@@ -1,7 +1,7 @@
 <!-- recent_episodes -->
 <div class="recent_episodes con_pd">
   <!-- recent_text -->
-  <div class="recent_text">
+  <div class="section_tit_1 recent_text">
     <h2 class="heading_2">Recent Episodes</h2>
     <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
     <a href="#none" class="btn_1 btn_recent">See All Episodes</a>
@@ -17,7 +17,7 @@
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
           <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i>숄라숄라</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
       <li>
@@ -26,6 +26,7 @@
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
           <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
       <li>
@@ -34,6 +35,7 @@
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
           <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
     </ul>
