--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -14,10 +14,11 @@
 
         <!-- @@include ../page_include/header.html -->
         <div class="promotion">
+            <button type="button">내용</button>
             <!-- promo_tit -->
             <div class="promo_tit con_pd">
                 <h1>Style Guide</h1>
-                <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
+                <img src="../assets/images/logo/logo.svg" alt="finsweet8 logo">
             </div>
             <!-- //promo_tit -->
 
@@ -76,56 +77,55 @@
                 <!-- components -->
                 <div class="components">
                   <h3>Components</h3>
+
                   <div>
-
                     <!-- btn -->
-                    <ul class="btn_com_list">
-                      <li><a href="#none" class="btn_1">Button</a></li>
-                      <li><a href="#none"class="btn_2">Secondary</a></li>
-                      <li><a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a></li>
-                      <li><a href="#none" class="btn_read">Read Now</a></li>
-                    </ul>
-
-                    <ul class="btn_hover_list">
-                      <li class="btn_1"><a href="#none">Hover</a></li>
-                      <li class="btn_2"><a href="#none">Hover</a></li>
-                      <li class="btn_listen"><a href="#none"><i class="play"></i>Hover</a></li>
-                      <li class="btn_read"><a href="#none">Hover</a></li>
-                    </ul>
+                    <div class="btn_com_list">
+                      <a href="#none" class="btn_1">Button</a>
+                      <a href="#none"class="btn_2">Secondary</a>
+                      <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+                      <a href="#none" class="btn_read">Read Now</a>
+                    </div>
+                    <a href="#none" class="btn_read">Read Now</a>
+                    <div class="btn_hover_list">
+                      <a href="#none" class="btn_1">Hover</a>
+                      <a href="#none" class="btn_2">Hover</a>
+                      <a href="#none" class="btn_listen"><i class="play"></i>Hover</a>
+                      <a href="#none" class="btn_read">Hover</a>
+                    </div>
                     <!-- //btn -->
 
                     <!-- category potcasts -->
-                    <ul class="category_potcasts">
-                      <li class="cate_pot_on"><a href="#none">All Podcasts</a></li>
-                      <li class="cate_pot"><a href="#none">Startup</a></li>
-                      <li class="cate_pot"><a href="#none">Marketing</a></li>
-                      <li class="cate_pot"><a href="#none">Business</a></li>
-                    </ul>
+                    <div class="category_potcasts">
+                      <a href="#none" class="cate_pot_on">All Podcasts</a>
+                      <a href="#none" class="cate_pot">Startup</a>
+                      <a href="#none" class="cate_pot">Marketing</a>
+                      <a href="#none" class="cate_pot">Business</a>
+                    </div>
                     <!-- //category potcasts -->
-
                   </div>
 
                   <div class="potcasts">
 
                     <!-- potcasts -->
                     <ul class="potcasts_list">
-                      <li><a href="#none" class="logo_apple"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
-                      <li><a href="#none" class="logo_sound_cloud"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
-                      <li><a href="#none" class="google_logo"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
-                      <li><a href="#none" class="spotify_logo"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
+                      <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
+                      <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                      <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                      <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
                     </ul>
                     <!-- //potcasts -->
 
                     <ul class="sns_list">
                       <div class="ico_big">
-                        <li class="facebook_b"><a href="#none"></a></li>
-                        <li class="linkedIn_b"><a href="#none"></a></li>
-                        <li class="instagram_b"><a href="#none"></a></li>
+                        <a href="#none" class="facebook_b"></a>
+                        <a href="#none" class="linkedIn_b"></a>
+                        <a href="#none" class="instagram_b"></a>
                       </div>
                       <div class="ico_small">
-                        <li class="facebook_s"><a href="#none"></a></li>
-                        <li class="linkedIn_s"><a href="#none"></a></li>
-                        <li class="instagram_s"><a href="#none"></a></li>
+                        <a href="#none" class="facebook_s"></a>
+                        <a href="#none" class="linkedIn_s"></a>
+                        <a href="#none" class="instagram_s"></a>
                       </div>
                     </ul>
                   </div>
@@ -138,6 +138,7 @@
         </div>
         </br></br></br></br></br></br>
         <!-- @@include ../page_include/recent_episodes.html -->
+        <!-- @@include ../page_include/footer_spoonsors.html -->
         <!-- @@include ../page_include/footer.html -->
       <!-- //contents -->
 
