--- a/pages/home.html
+++ b/pages/home.html
@@ -156,24 +156,11 @@
 <!-- footer -->
 <footer>
 
-  <!-- footer_sponsors -->
-  <div class="footer_sponsors">
-    <h3 class="heading_2">Our Spoonsors</h3>
-    <div class="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_5.png" alt="logoipsum">
-    </div>
-  </div>
-  <!-- //footer_sponsors -->
-
   <!-- footer_con -->
   <div class="footer_con">
 
     <div class="logo_wrap">
-      <a href="Home.html"><img src="../../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+      <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
 
     <div class="pages">
@@ -197,10 +184,10 @@
     <div class="subscribe">
       <h4>Subscribe</h4>
       <ul>
-        <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
-        <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
-        <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
-        <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+        <li class="logo_apple"><a href="#none"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
       </ul>
     </div>
     <!-- dark_mode -->
