--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -81,10 +81,11 @@
 
 </script>
         <div class="promotion">
+            <button type="button">내용</button>
             <!-- promo_tit -->
             <div class="promo_tit con_pd">
                 <h1>Style Guide</h1>
-                <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
+                <img src="../assets/images/logo/logo.svg" alt="finsweet8 logo">
             </div>
             <!-- //promo_tit -->
 
@@ -143,56 +144,55 @@
                 <!-- components -->
                 <div class="components">
                   <h3>Components</h3>
+
                   <div>
-
                     <!-- btn -->
-                    <ul class="btn_com_list">
-                      <li><a href="#none" class="btn_1">Button</a></li>
-                      <li><a href="#none"class="btn_2">Secondary</a></li>
-                      <li><a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a></li>
-                      <li><a href="#none" class="btn_read">Read Now</a></li>
-                    </ul>
-
-                    <ul class="btn_hover_list">
-                      <li class="btn_1"><a href="#none">Hover</a></li>
-                      <li class="btn_2"><a href="#none">Hover</a></li>
-                      <li class="btn_listen"><a href="#none"><i class="play"></i>Hover</a></li>
-                      <li class="btn_read"><a href="#none">Hover</a></li>
-                    </ul>
+                    <div class="btn_com_list">
+                      <a href="#none" class="btn_1">Button</a>
+                      <a href="#none"class="btn_2">Secondary</a>
+                      <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+                      <a href="#none" class="btn_read">Read Now</a>
+                    </div>
+                    <a href="#none" class="btn_read">Read Now</a>
+                    <div class="btn_hover_list">
+                      <a href="#none" class="btn_1">Hover</a>
+                      <a href="#none" class="btn_2">Hover</a>
+                      <a href="#none" class="btn_listen"><i class="play"></i>Hover</a>
+                      <a href="#none" class="btn_read">Hover</a>
+                    </div>
                     <!-- //btn -->
 
                     <!-- category potcasts -->
-                    <ul class="category_potcasts">
-                      <li class="cate_pot_on"><a href="#none">All Podcasts</a></li>
-                      <li class="cate_pot"><a href="#none">Startup</a></li>
-                      <li class="cate_pot"><a href="#none">Marketing</a></li>
-                      <li class="cate_pot"><a href="#none">Business</a></li>
-                    </ul>
+                    <div class="category_potcasts">
+                      <a href="#none" class="cate_pot_on">All Podcasts</a>
+                      <a href="#none" class="cate_pot">Startup</a>
+                      <a href="#none" class="cate_pot">Marketing</a>
+                      <a href="#none" class="cate_pot">Business</a>
+                    </div>
                     <!-- //category potcasts -->
-
                   </div>
 
                   <div class="potcasts">
 
                     <!-- potcasts -->
                     <ul class="potcasts_list">
-                      <li><a href="#none" class="logo_apple"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
-                      <li><a href="#none" class="logo_sound_cloud"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
-                      <li><a href="#none" class="google_logo"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
-                      <li><a href="#none" class="spotify_logo"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
+                      <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
+                      <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                      <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                      <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
                     </ul>
                     <!-- //potcasts -->
 
                     <ul class="sns_list">
                       <div class="ico_big">
-                        <li class="facebook_b"><a href="#none"></a></li>
-                        <li class="linkedIn_b"><a href="#none"></a></li>
-                        <li class="instagram_b"><a href="#none"></a></li>
+                        <a href="#none" class="facebook_b"></a>
+                        <a href="#none" class="linkedIn_b"></a>
+                        <a href="#none" class="instagram_b"></a>
                       </div>
                       <div class="ico_small">
-                        <li class="facebook_s"><a href="#none"></a></li>
-                        <li class="linkedIn_s"><a href="#none"></a></li>
-                        <li class="instagram_s"><a href="#none"></a></li>
+                        <a href="#none" class="facebook_s"></a>
+                        <a href="#none" class="linkedIn_s"></a>
+                        <a href="#none" class="instagram_s"></a>
                       </div>
                     </ul>
                   </div>
@@ -207,7 +207,7 @@
 <!-- recent_episodes -->
 <div class="recent_episodes con_pd">
   <!-- recent_text -->
-  <div class="recent_text">
+  <div class="section_tit_1 recent_text">
     <h2 class="heading_2">Recent Episodes</h2>
     <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
     <a href="#none" class="btn_1 btn_recent">See All Episodes</a>
@@ -223,7 +223,7 @@
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
           <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i>숄라숄라</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
       <li>
@@ -232,6 +232,7 @@
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
           <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
       <li>
@@ -240,6 +241,7 @@
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
           <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
     </ul>
@@ -249,27 +251,26 @@
 <!-- //recent_episodes -->
 
 
+<!-- footer_sponsors -->
+<div class="footer_sponsors">
+<h3 class="heading_2">Our Spoonsors</h3>
+<div class="logoipsum">
+    <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+</div>
+</div>
+<!-- //footer_sponsors -->
 <!-- footer -->
 <footer>
-
-  <!-- footer_sponsors -->
-  <div class="footer_sponsors">
-    <h3 class="heading_2">Our Spoonsors</h3>
-    <div class="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_5.png" alt="logoipsum">
-    </div>
-  </div>
-  <!-- //footer_sponsors -->
 
   <!-- footer_con -->
   <div class="footer_con">
 
     <div class="logo_wrap">
-      <a href="Home.html"><img src="../../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+      <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
 
     <div class="pages">
@@ -293,10 +294,10 @@
     <div class="subscribe">
       <h4>Subscribe</h4>
       <ul>
-        <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
-        <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
-        <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
-        <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+        <li class="logo_apple"><a href="#none"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
       </ul>
     </div>
     <!-- dark_mode -->
