--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -26,7 +26,7 @@
 <!-- header -->
 <header class="con_pd">
     <h1>
-      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+      <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
     </h1>
 
     <!-- gnb -->
@@ -81,7 +81,6 @@
 
 </script>
         <div class="promotion">
-            <button type="button">내용</button>
             <!-- promo_tit -->
             <div class="promo_tit con_pd">
                 <h1>Style Guide</h1>
