공통수정(max-w, 간격)

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -4,10 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-
+<!-- @@include ../page_include/header.html -->
   <!-- container -->
   <div class="container">
-
       <!-- contents -->
       <div id="contents">
         <div class="home_wrap">
@@ -57,7 +56,7 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <div class="custom_swiper con-m">
+          <div class="custom_swiper con-m con_pd">
             <div class="custom_wrap">
               <div class="custom_item">
                 <div class="my_review">
@@ -106,15 +105,13 @@
           <!-- @@include ../page_include/layout_list.html -->
 
         </div><!-- //home_wrap -->
-        <!-- @@include ../page_include/footer.html -->
-
       </div>
       <!-- //contents -->
-
-
-
+      <!-- @@include ../page_include/footer_spoonsors.html -->
   </div>
-  <!-- //container -->
+    <!-- //container -->
+
+    <!-- @@include ../page_include/footer.html -->
 </div>
 <!-- //wrapper -->
 
