--- a/dev/page_include/layout_list.html
+++ b/dev/page_include/layout_list.html
@@ -1,5 +1,5 @@
 <!-- laytout_list -->
-<div class="con-m">
+<div class="con-m con_pd">
   <ul class="item_list_wrap">
     <li class="item">
       <a href="#none">Read our articles & news</a>
