--- a/dev/page_include/layout_your_inbox.html
+++ b/dev/page_include/layout_your_inbox.html
@@ -1,5 +1,5 @@
 <!-- layout_your_inbox -->
-<div class="inbox_wrap con-m">
+<div class="inbox_wrap con_pd">
   <div class="inbox">
     <p class="heading_2">Receive new episodes in your inbox.</p>
     <p class="email_send">
