--- a/pages/home.html
+++ b/pages/home.html
@@ -15,10 +15,65 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+<!-- header -->
+<header class="con_pd">
+    <h1>
+      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </h1>
 
+    <!-- gnb -->
+    <nav>
+      <div class="gnb">
+        
+        <!-- mo_hamburger -->
+        <div class="mo_hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <!-- //mo_hamburger -->
+
+        <div class="bg_gray"></div>
+
+        <div class="sub_menu">
+          <ul class="menu">
+            <li><a href="Podcasts.html">Podcasts</a></li>
+            <li><a href="Host.html">Host</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+
+          <ul class="sns">
+            <li><a href="#none" class="facebook_b"></a></li>
+            <li><a href="#none" class="linkedIn_b"></a></li>
+            <li><a href="#none" class="instagram_b"></a></li>
+          </ul>
+        </div>
+        
+      </div>
+    </nav>
+    <!-- //gnb -->
+</header>
+<!-- //header -->
+
+<script>
+
+  const burger = document.querySelector('.mo_hamburger');
+  const sub = document.querySelector('.sub_menu');
+  const bgOn = document.querySelector('.bg_gray');
+
+  burger.addEventListener('click', () => {
+    burger.classList.toggle('toggle');
+    // 수정필요 .contents oh
+    sub.classList.toggle('mo_menu_on')
+    bgOn.classList.toggle('mo_bg_on')
+    document.body.classList.toggle('no_scroll')
+  })
+
+</script>
   <!-- container -->
   <div class="container">
-
       <!-- contents -->
       <div id="contents">
         <div class="home_wrap">
@@ -68,7 +123,7 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <div class="custom_swiper con-m">
+          <div class="custom_swiper con-m con_pd">
             <div class="custom_wrap">
               <div class="custom_item">
                 <div class="my_review">
@@ -113,7 +168,7 @@
 
           </div>
 <!-- layout_your_inbox -->
-<div class="inbox_wrap con-m">
+<div class="inbox_wrap con_pd">
   <div class="inbox">
     <p class="heading_2">Receive new episodes in your inbox.</p>
     <p class="email_send">
@@ -127,7 +182,7 @@
 
 
 <!-- laytout_list -->
-<div class="con-m">
+<div class="con-m con_pd">
   <ul class="item_list_wrap">
     <li class="item">
       <a href="#none">Read our articles & news</a>
@@ -153,6 +208,23 @@
 
 
         </div><!-- //home_wrap -->
+      </div>
+      <!-- //contents -->
+<!-- footer_sponsors -->
+<div class="footer_sponsors">
+<h3 class="heading_2">Our Spoonsors</h3>
+<div class="logoipsum">
+    <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+    <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+</div>
+</div>
+<!-- //footer_sponsors -->
+  </div>
+    <!-- //container -->
+
 <!-- footer -->
 <footer>
 
@@ -201,14 +273,6 @@
 
 </footer>
 <!-- //footer -->
-
-      </div>
-      <!-- //contents -->
-
-
-
-  </div>
-  <!-- //container -->
 </div>
 <!-- //wrapper -->
 
