--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -10,7 +10,21 @@
 
       <!-- contents -->
       <div id="contents">
-        host page
+        <!-- @@include ../page_include/header.html -->
+        <div class="host_wrap">
+          <div class="host_top">
+            <div class="host_vector">
+            </div>
+            <div class="host_tit">
+              <em>ABOUT THE HOST</em>
+              <p class="heading_2">Hey there, I’m Andrew Jonson and welcome to my Podcast</p>
+              <p>Apparently we had reached a great height in the
+                atmosphere, for the sky was a dead black, and the
+                stars had ceased to twinkle.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- //contents -->
 
