오타수정, sponsors  여백 수정

--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -5,15 +5,16 @@
 <!-- wrapper -->
 <div id="wrapper">
 
+  <!-- @@include ../page_include/header.html -->
+
   <!-- container -->
   <div class="container">
-
+    
       <!-- contents -->
       <div id="contents">
-        <!-- @@include ../page_include/header.html -->
         <div class="host_wrap">
           <div class="host_top">
-            <div class="host_vector">
+            <div class="host_top_img">
             </div>
             <div class="host_tit">
               <em>ABOUT THE HOST</em>
