--- a/pages/host.html
+++ b/pages/host.html
@@ -16,11 +16,6 @@
 <!-- wrapper -->
 <div id="wrapper">
 
-  <!-- container -->
-  <div class="container">
-
-      <!-- contents -->
-      <div id="contents">
 <!-- header -->
 <header class="con_pd">
     <h1>
@@ -78,9 +73,15 @@
   })
 
 </script>
+
+  <!-- container -->
+  <div class="container">
+    
+      <!-- contents -->
+      <div id="contents">
         <div class="host_wrap">
           <div class="host_top">
-            <div class="host_vector">
+            <div class="host_top_img">
             </div>
             <div class="host_tit">
               <em>ABOUT THE HOST</em>
