--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -250,7 +250,7 @@
 
 <!-- footer_sponsors -->
 <div class="footer_sponsors">
-<h3 class="heading_2">Our Spoonsors</h3>
+<h3 class="heading_2">Our Sponsors</h3>
 <div class="logoipsum">
     <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
     <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
