공통작업, home페이지 수정

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -64,9 +64,8 @@
                 </div>
                 <div class="heading_5 review_con">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
                 </div>
               </div>
               <div class="custom_item">
@@ -77,8 +76,6 @@
                 <div class="heading_5 review_con">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
                 </div>
               </div>
               <div class="custom_item">
@@ -106,7 +103,7 @@
         </div><!-- //home_wrap -->
       </div>
       <!-- //contents -->
-      <!-- @@include ../page_include/footer_sponsors.html -->
+
   </div>
     <!-- //container -->
 
