--- a/dev/page_include/layout_list.html
+++ b/dev/page_include/layout_list.html
@@ -1,21 +1,29 @@
 <!-- laytout_list -->
 <div class="con-m con_pd">
   <ul class="item_list_wrap">
-    <li class="item">
-      <a href="#none">Read our articles & news</a>
-    </li>
-    <li class="item">
-      <a href="#none">
-        <p class="heading_3">Getting the first 100 customers for your business</p>
-        <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-        <p class="btn_listen">Read Now</p>
+    <li>
+      <a href="#none" class="item">
+        <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img">
       </a>
     </li>
-    <li class="item">
-      <a href="#none">
-        <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
-        <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-        <p class="btn_listen">Read Now</p>
+    <li>
+      <a href="#none" class="item">
+        <img src="../assets/images/contents/articles_1.png" alt="articleNews_img">
+        <div>
+          <p class="heading_3">Getting the first 100 customers for your business</p>
+          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <p class="btn_listen">Read Now</p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="#none"  class="item">
+        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img">
+        <div>
+          <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
+          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <p class="btn_listen">Read Now</p>
+        </div>
       </a>
     </li>
   </ul>
