--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -249,7 +249,7 @@
 
 
 <!-- footer_sponsors -->
-<div class="footer_sponsors">
+<div class="footer_sponsors con-m">
 <h3 class="heading_2">Our Sponsors</h3>
 <div class="logoipsum">
     <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
