--- a/pages/home.html
+++ b/pages/home.html
@@ -75,9 +75,8 @@
                 </div>
                 <div class="heading_5 review_con">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
                 </div>
               </div>
               <div class="custom_item">
@@ -88,8 +87,6 @@
                 <div class="heading_5 review_con">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
                 </div>
               </div>
               <div class="custom_item">
@@ -111,7 +108,7 @@
 
           </div>
 <!-- layout_your_inbox -->
-<div class="inbox_wrap con_pd">
+<div class="inbox_wrap">
   <div class="inbox">
     <p class="heading_2">Receive new episodes in your inbox.</p>
     <p class="email_send">
@@ -127,21 +124,29 @@
 <!-- laytout_list -->
 <div class="con-m con_pd">
   <ul class="item_list_wrap">
-    <li class="item">
-      <a href="#none">Read our articles & news</a>
-    </li>
-    <li class="item">
-      <a href="#none">
-        <p class="heading_3">Getting the first 100 customers for your business</p>
-        <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-        <p class="btn_listen">Read Now</p>
+    <li>
+      <a href="#none" class="item">
+        <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img">
       </a>
     </li>
-    <li class="item">
-      <a href="#none">
-        <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
-        <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-        <p class="btn_listen">Read Now</p>
+    <li>
+      <a href="#none" class="item">
+        <img src="../assets/images/contents/articles_1.png" alt="articleNews_img">
+        <div>
+          <p class="heading_3">Getting the first 100 customers for your business</p>
+          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <p class="btn_listen">Read Now</p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="#none"  class="item">
+        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img">
+        <div>
+          <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
+          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <p class="btn_listen">Read Now</p>
+        </div>
       </a>
     </li>
   </ul>
@@ -153,18 +158,7 @@
         </div><!-- //home_wrap -->
       </div>
       <!-- //contents -->
-<!-- footer_sponsors -->
-<div class="footer_sponsors">
-<h3 class="heading_2">Our Sponsors</h3>
-<div class="logoipsum">
-    <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
-</div>
-</div>
-<!-- //footer_sponsors -->
+
   </div>
     <!-- //container -->
 
